# smd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure
doc/: Doxyfile.in
include/: smd-datatype.h  smd-internal.h  smd.h  smt.h
src/: CMakeLists.txt  smd-core.c  smd-datatype.c
src/src/: smd-core.c
test/: CMakeLists.txt  basic-types-conversion-tst.c  basic-types-test-double.c  basic-types-test-int.c  basic-types.c  derived-attr-serde.c  derived-types.c  ser-dtype.c  serde.c  string-stream-benchmark.c  tst-conversion-all.c  tst-conversion-char.c  tst-conversion-double.c  tst-conversion-float.c  tst-conversion-int16.c  tst-conversion-int32.c  tst-conversion-int64.c  tst-conversion-int8.c  tst-conversion-lu.c  tst-conversion-uint16.c  tst-conversion-uint32.c  tst-conversion-uint64.c  tst-conversion-uint8.c  tst-conversion.c  tst-double-float-all.c  tst-double-int16-all.c  tst-double-int32-all.c  tst-double-int64-all.c  tst-double-int8-all.c  tst-double-uint16-all.c  tst-double-uint32-all.c  tst-double-uint64-all.c  tst-double-uint8-all.c  tst-float-int16-all.c  tst-float-int32-all.c  tst-float-int32.c  tst-float-int64-all.c  tst-float-int8-all.c  tst-float-uint16-all.c  tst-float-uint32-all.c  (+8 more)
